[package]
name = "cgkitten"
version = "0.1.0"
edition = "2024"
description = "Convert mmCIF/PDB protein structures to coarse-grained representation with Monte Carlo titration"
authors = ["Mikael Lund <lyssky@icloud.com>"]
repository = "https://github.com/mlund/cgkitten"
documentation = "https://docs.rs/cgkitten"
readme = "README.md"
license = "Apache-2.0"
categories = ["science"]
keywords = ["bioinformatics", "coarse_grained", "titration", "monte_carlo"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:env_logger", "dep:indicatif", "dep:nu-ansi-term", "dep:rayon", "dep:rgb", "dep:textplots"]
serde = ["dep:serde"]

[[bin]]
name = "cgkitten"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
env_logger = { version = "0.11", optional = true }
indicatif = { version = "0.17", features = ["rayon"], optional = true }
log = "0.4"
nu-ansi-term = { version = "0.50", optional = true }
rand = "0.8"
rayon = { version = "1", optional = true }
rgb = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
textplots = { version = "0.8", optional = true }

[profile.release]
strip = true
lto = true
